@@ -2268,6 +2268,7 @@
 	'S_NO_SYSTEM_MAP_WITH'=>		'No system map with',
 	'S_NO_SYSMAP_ELEMENT_WITH'=>		'No sysmap element with',
 	'S_TEMPLATE_SMALL'=>			'template',
+	'S_SUBMAP'=>			'Submap',
 
 //	screens.inc.php
 	'S_NO_ROWS_IN_SCREEN'=>				'No rows in screen',
