@@ -1,6 +1,7 @@
 Changes for 1.8.4rc1
 
  - [ZBX-2493] fixed obsolete macro used by default; start using different subject and message for default action messages (Richlv)
+ - [ZBX-2950] added popup menus for map elements (Vedmak)
  - [ZBX-2967] added filter for hosts configuration screen (Vedmak)
  - [ZBX-2969] improved SQL statement for synchronizing of nodes; thanks to Łukasz Reszka (Sasha)
  - [ZBX-2962] fixed template macro update (Vedmak)
